sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:13: error: value and is not a member of Boolean
      if (plusPetit(i,i+1)==false and i<tour)
                                  ^